--- a/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/bio-event/bio-event.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/bio-event/bio-event.component.html
@@ -107,6 +107,7 @@
     <mat-tab label="sources">
       <!-- sources -->
       <cadmus-doc-references
+        [tagEntries]="docRefTagEntries"
         [model$]="sources$"
         (modelChange)="onSourcesChanged($event)"
       ></cadmus-doc-references>
