--- a/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/bio-event/bio-event.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/bio-event/bio-event.component.html
@@ -98,10 +98,10 @@
 
       <!-- ids -->
       <h4>external IDs</h4>
-      <itinera-external-ids
+      <cadmus-external-ids
         [model$]="ids$"
         (modelChange)="onIdsChanged($event)"
-      ></itinera-external-ids>
+      ></cadmus-external-ids>
     </mat-tab>
 
     <mat-tab label="sources">
